# Estimating_coherent_errors_with_DEMs

./: .gitmodules  CMakeLists.txt  README.md  call_to_pymatching.cpp
examples/: sampling_surface_code.py
include/: Monte_Carlo_Sim_rep_code.h  Monte_Carlo_Sim_surf_code.h  Stochastic_Ops.h  Unitary_Ops.h  call_to_pymatching.h  constants.h  estimation_functions_rep_code.h  estimation_functions_surf_code.h  utils.h  utils_sc.h
include/coherent_noise_sim/: Kets.h  Measurements.h  PrecisionOfTypes.h  Unitary_Ops.h  call_to_pymatching.h  estimation_functions_rep_code.h
sims/: Rep_code_circuit_lev_threshold.py  Rep_code_logical_infidelity.py  Rep_code_phenom_threshold.py  Rep_code_small_gate_errors_threshold.py
src/: Kets.cpp  Measurements.cpp  Monte_Carlo_Sim_rep_code.cpp  Monte_Carlo_Sim_surf_code.cpp  Stochastic_Ops.cpp  Unitary_Ops.cpp  bindings_rep_code.cpp  bindings_surf_code.cpp  call_to_pymatching.cpp  estimation_functions_rep_code.cpp  estimation_functions_surf_code.cpp
